Fixed some layout issues w/ mobile

--- a/_sass/_game.scss
+++ b/_sass/_game.scss
@@ -47,6 +47,7 @@
 
 .game-screenshot{
     &__container{
+        flex: 15%;
         height: 11rem;
         width: 11rem;
         text-align: center;
@@ -55,6 +56,9 @@
         border: 1px solid #ccc;
         &:hover{
             border: 1px solid #777;
+        }
+        @media only screen and (max-width: 800px){
+            flex: 30%;
         }
     }
 
@@ -94,4 +98,13 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+.steam-badge{
+    width: 100%;
+    max-width: 40rem;
+    &__container{
+        display: flex;
+        justify-content: center;
+    }
 }
