--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -6,7 +6,10 @@
 .homepage-header{
     text-align: center;
     &__title{
-        font-size: 10vw;
+        font-size: 12vw;
+        margin: 0;
+        margin-top: 3rem;
+        margin-bottom: 1rem;
     }
 }
 
@@ -18,10 +21,10 @@
         text-align: center;
         font-size: 1.7rem;
         color:black;
-        max-width: 10vw;
+        width: 10rem;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin: 1rem;
+        margin: 2rem;
     }
 }
